// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Core/RadioButtonGroup Default 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 hExPlF sc-fXEqDS hyLvgQ"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 hpSXsQ sc-fIosxK kLhAhX sc-gyElHZ SKrzf"
      role="radiogroup"
    >
      <label
        class="StyledRadioButton__StyledRadioButtonContainer-sc-g1f6ld-0 jGWwCF"
        for="plain 1"
      >
        <div
          class="StyledBox-sc-13pk1d4-0 guhInB StyledRadioButton-sc-g1f6ld-5 hNMTMW"
        >
          <input
            checked=""
            class="StyledRadioButton__StyledRadioButtonInput-sc-g1f6ld-1 fhNmLR"
            id="plain 1"
            name="radio button group"
            tabindex="0"
            type="radio"
            value="plain 1"
          />
          <div
            class="StyledBox-sc-13pk1d4-0 hGxhDW StyledRadioButton__StyledRadioButtonBox-sc-g1f6ld-4 ivjGdo"
          >
            <svg
              class="StyledRadioButton__StyledRadioButtonIcon-sc-g1f6ld-3 cnhARf"
              preserveAspectRatio="xMidYMid meet"
              viewBox="0 0 24 24"
            >
              <circle
                cx="12"
                cy="12"
                r="6"
              />
            </svg>
          </div>
        </div>
        <span
          class="StyledRadioButton__StyledRadioButtonLabel-sc-g1f6ld-2"
        >
          plain 1
        </span>
      </label>
      <div
        class="StyledBox__StyledBoxGap-sc-13pk1d4-1 cHicIt"
      />
      <label
        class="StyledRadioButton__StyledRadioButtonContainer-sc-g1f6ld-0 jGWwCF"
        for="plain 2"
      >
        <div
          class="StyledBox-sc-13pk1d4-0 guhInB StyledRadioButton-sc-g1f6ld-5 hNMTMW"
        >
          <input
            class="StyledRadioButton__StyledRadioButtonInput-sc-g1f6ld-1 fhNmLR"
            id="plain 2"
            name="radio button group"
            tabindex="-1"
            type="radio"
            value="plain 2"
          />
          <div
            class="StyledBox-sc-13pk1d4-0 iEnEti StyledRadioButton__StyledRadioButtonBox-sc-g1f6ld-4 ivjGdo"
          />
        </div>
        <span
          class="StyledRadioButton__StyledRadioButtonLabel-sc-g1f6ld-2"
        >
          plain 2
        </span>
      </label>
    </div>
  </div>
</div>
`;

exports[`Storyshots Core/RadioButtonGroup With Expanded Options 1`] = `
<div>
  <div
    class="StyledGrommet-sc-19lkkz7-0 hExPlF sc-fXEqDS hyLvgQ"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 hpSXsQ sc-fIosxK jxvxNb sc-gyElHZ SKrzf"
      role="radiogroup"
    >
      <label
        class="StyledRadioButton__StyledRadioButtonContainer-sc-g1f6ld-0 bgseKw"
        disabled=""
      >
        <div
          class="StyledBox-sc-13pk1d4-0 guhInB StyledRadioButton-sc-g1f6ld-5 hNMTMW"
        >
          <input
            class="StyledRadioButton__StyledRadioButtonInput-sc-g1f6ld-1 gjwrmF"
            disabled=""
            name="radio button group"
            tabindex="-1"
            type="radio"
            value="disabled"
          />
          <div
            class="StyledBox-sc-13pk1d4-0 iEnEti StyledRadioButton__StyledRadioButtonBox-sc-g1f6ld-4 ivjGdo"
          />
        </div>
        <span
          class="StyledRadioButton__StyledRadioButtonLabel-sc-g1f6ld-2"
        >
          disabled
        </span>
      </label>
      <div
        class="StyledBox__StyledBoxGap-sc-13pk1d4-1 cHicIt"
      />
      <label
        class="StyledRadioButton__StyledRadioButtonContainer-sc-g1f6ld-0 jGWwCF"
      >
        <div
          class="StyledBox-sc-13pk1d4-0 guhInB StyledRadioButton-sc-g1f6ld-5 hNMTMW"
        >
          <input
            class="StyledRadioButton__StyledRadioButtonInput-sc-g1f6ld-1 fhNmLR"
            name="radio button group"
            tabindex="-1"
            type="radio"
            value="enabled"
          />
          <div
            class="StyledBox-sc-13pk1d4-0 iEnEti StyledRadioButton__StyledRadioButtonBox-sc-g1f6ld-4 ivjGdo"
          />
        </div>
        <span
          class="StyledRadioButton__StyledRadioButtonLabel-sc-g1f6ld-2"
        >
          enabled
        </span>
      </label>
      <div
        class="StyledBox__StyledBoxGap-sc-13pk1d4-1 cHicIt"
      />
      <label
        class="StyledRadioButton__StyledRadioButtonContainer-sc-g1f6ld-0 jGWwCF"
      >
        <div
          class="StyledBox-sc-13pk1d4-0 guhInB StyledRadioButton-sc-g1f6ld-5 hNMTMW"
        >
          <input
            checked=""
            class="StyledRadioButton__StyledRadioButtonInput-sc-g1f6ld-1 fhNmLR"
            name="radio button group"
            tabindex="0"
            type="radio"
            value="selected"
          />
          <div
            class="StyledBox-sc-13pk1d4-0 hGxhDW StyledRadioButton__StyledRadioButtonBox-sc-g1f6ld-4 ivjGdo"
          >
            <svg
              class="StyledRadioButton__StyledRadioButtonIcon-sc-g1f6ld-3 cnhARf"
              preserveAspectRatio="xMidYMid meet"
              viewBox="0 0 24 24"
            >
              <circle
                cx="12"
                cy="12"
                r="6"
              />
            </svg>
          </div>
        </div>
        <span
          class="StyledRadioButton__StyledRadioButtonLabel-sc-g1f6ld-2"
        >
          selected
        </span>
      </label>
    </div>
  </div>
</div>
`;
